bluec-tests/tests/invalid/types_bool/cast_lvalue.c
int main(void) {
    int i = 0;
    (_Bool)i = 1;
    return 0;
}